@@ -1,89 +1,0 @@
-# File: tox.ini
-# Updated:  3-Jul-2019 jdw
-#
-[tox]
-envlist = py37-flake8, py37-pylint, py37-formatting, py{37}, py37-coverage
-#
-skip_missing_interpreters = True
-skip_install = False
-skipsdist = False
-
-
-[testenv]
-whitelist_externals = echo
-platform=
-       macos: darwin
-       linux: linux
-
-basepython =
-    py27: python2.7
-    py37: python3.7
-
-recreate = True
-deps = echo
-
-commands =
-    echo "Starting tests"
-    {envpython} -V
-    {envpython} -m unittest discover -v --start-directory rcsb/utils/tests-seq/ --pattern "test*.py"
-    echo "Completed tests"
-
-[testenv:py37-flake8]
-whitelist_externals = echo
-basepython = py37: python3.7
-skip_install = true
-deps =
-    echo
-    flake8
-    flake8-docstrings>=0.2.7
-    flake8-import-order>=0.9
-commands =
-    # Exceptions: D for docstrings, I for imports order and formatting, E302 is slice spacing  - W503 multiline spacing incompatible with black
-    flake8 --max-line-length=185 --ignore=D,I,E203,W503  --exclude=rcsb/mock-data/ rcsb/utils/ setup.py
-
-#
-[testenv:py37-pylint]
-whitelist_externals = echo
-basepython = py37: python3.7
-skip_install = false
-deps =
-    echo
-    pylint
-commands =
-    echo "Running linter"
-    pylint --disable=R,C --reports=n --rcfile={toxinidir}/pylintrc  rcsb/utils/seq rcsb/utils/tests-seq
-    echo "Linting done"
-#
-
-[testenv:py37-formatting]
-whitelist_externals = echo
-basepython = py37: python3.7
-deps =
-    echo
-    black>=19.3b0
-    #    isort>=4.3.20
-commands =
-    echo "Check formatting"
-    black --check --line-length 180 --exclude "rcsb/utils/test-seq/test-output" rcsb/utils/seq rcsb/utils/tests-seq
-    #    isort -rc rcsb/utils --check-only
-    echo "Done format check"
-changedir = {toxinidir}
-
-
-[testenv:py37-coverage]
-whitelist_externals = echo
-basepython = py37: python3.7
-deps =
-    coverage
-    echo
-
-commands =
-    echo "Evaluating coverage"
-    coverage erase
-    coverage run --parallel-mode --omit="rcsb/utils/tests-*","rcsb/mock-data/*" --source rcsb/utils/ -m unittest discover  --start-directory rcsb/utils/tests-seq/ --pattern "test*.py"
-    coverage combine
-    coverage report --omit="rcsb/mock-data/*","rcsb/utils/tests-seq/*"   --show-missing --fail-under=50
-    - coverage html
-    echo "Done with coverage"
-
-#
